# pneumonia

./: .gitignore  dataset.py  list.py  pyproject.toml  test.csv  train.csv
